fix spacing on footer with flex-grow

--- a/src/components/AppHeader/style.scss
+++ b/src/components/AppHeader/style.scss
@@ -14,4 +14,5 @@
   color: vars.$fontColor !important;
   font-weight: bold;
   text-align: center;
+  font-size: 1.1em;
 }
